[tool.poetry]
name = "low-level-python"
version = "0.1.0"
description = ""
authors = ["joragasy <joragasy@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
